--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "mocha": "^2.5.3"
+  },
+  "dependencies": {
+    "jquery": "^3.0.0"
   }
 }
