--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "ludens-helper",
   "version": "1.0.0",
   "description": "An API for helper methods",
-  "main": "./src/ludenshelper.js",
+  "main": "./src/all.js",
   "scripts": {
     "prebuild": "rm -rf ./lib && mkdir lib",
-    "build": "babel src/ludenshelper.js -o lib/ludenshelper.build.js",
-    "test": "mocha tests/ludenshelper.test.js --compilers js:babel-core/register"
+    "build": "gulp compile --production",
+    "dev": "gulp",
+    "test": "mocha tests/all.test.js --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
@@ -30,8 +31,21 @@
     "babel-core": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
     "chai": "^3.5.0",
-    "mocha": "^2.5.3"
+    "gulp": "^3.9.1",
+    "gulp-if": "^2.0.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.4",
+    "gulp-util": "^3.0.7",
+    "mocha": "^2.5.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
+    "yargs": "^4.7.1"
   },
   "dependencies": {
     "jquery": "^3.0.0"
